app-be/route-app-be.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-be
  namespace: app-be-acm
  labels:
    app: app-be
spec:
  to:
    kind: Service
    name: app-be
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
